오류 전체 수정